--- a/index.html
+++ b/index.html
@@ -8,15 +8,16 @@
     <title>Hello!</title>
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css">
 </head>
 <script src="https://unpkg.com/boxicons@2.1.4/dist/boxicons.js"></script>
 
-<body class="bg-gray-100">
+<body class="bg-white text-black dark:bg-gray-800 dark:text-white transition duration-300">
 
 
     <!-- SIDEBAR -->
-    <section id="sidebar" class="fixed top-0 left-0 w-72 h-full bg-white z-50 transition-all duration-300">
-        <a href="#" class="block text-center py-4 text-xl font-bold text-blue-600">Visitor</a>
+    <section id="sidebar" class="fixed top-0 left-0 w-72 h-full bg-white dark:bg-gray-800 z-50 transition-all duration-300">
+        <a href="#" class="block text-center py-4 text-xl font-bold text-blue-600 dark:text-blue-400">Visitor</a>
         <ul class="space-y-2 mt-6">
             <li class="px-4 py-2 bg-gray-200 rounded-r-full">
                 <a href="#" class="flex items-center space-x-2">
@@ -41,7 +42,7 @@
             <i class='bx bx-menu text-xl cursor-pointer'></i>
             <a href="#" class="ml-4">Get all your performance here</a>
             <input type="checkbox" id="switch-mode" class="hidden">
-            <label for="switch-mode" class="ml-auto cursor-pointer w-12 h-6 bg-gray-300 rounded-full relative">
+            <label for="switch-mode" class="ml-auto cursor-pointer w-12 h-6 bg-gray-300 dark:bg-gray-600 rounded-full relative">
                 <span class="absolute w-6 h-6 bg-blue-600 rounded-full left-0 transition-transform transform"></span>
             </label>
         </nav>
@@ -176,14 +177,14 @@
                     label: '# of Votes',
                     data: [10, 5, 7],
                     backgroundColor: [
-                        'rgba(255, 99, 132, 0.2)',
-                        'rgba(75, 192, 192, 0.2)',
-                        'rgba(255, 206, 86, 0.2)'
+                        'rgb(255, 51, 0)',   // Oranye cerah
+                        'rgba(0, 255, 0, 1)',    // Hijau
+                        'rgba(204, 0, 0, 1)'   // Merah
                     ],
                     borderColor: [
-                        'rgba(255, 99, 132, 1)',
-                        'rgba(75, 192, 192, 1)',
-                        'rgba(255, 206, 86, 1)'
+                        'rgba(255, 165, 0, 1)',  // Oranye
+                        'rgba(0, 255, 0, 1)',    // Hijau
+                        'rgba(204, 0, 0, 1)'   // Merah
                     ],
                     borderWidth: 1
                 }]
@@ -194,6 +195,19 @@
                         beginAtZero: true
                     }
                 }
+            }
+        });
+    </script>
+    <script>
+        // Dark mode toggle
+        const switchMode = document.getElementById('switch-mode');
+        const htmlElement = document.documentElement;
+
+        switchMode.addEventListener('change', () => {
+            if (switchMode.checked) {
+                htmlElement.classList.add('dark');
+            } else {
+                htmlElement.classList.remove('dark');
             }
         });
     </script>
