--- a/index.html
+++ b/index.html
@@ -38,9 +38,9 @@
     <!-- CONTENT -->
     <section id="content" class="ml-72 p-6">
         <!-- NAVBAR -->
-        <nav class="bg-white p-4 shadow flex items-center">
+        <nav class="bg-white p-4 shadow flex items-center dark:text-black">
             <i class='bx bx-menu text-xl cursor-pointer'></i>
-            <a href="#" class="ml-4">Get all your performance here</a>
+            <a href="#" class="ml-4 dark:text-black">Get all your performance here</a>
             <input type="checkbox" id="switch-mode" class="hidden">
             <label for="switch-mode" class="ml-auto cursor-pointer w-12 h-6 bg-gray-300 dark:bg-gray-600 rounded-full relative">
                 <span class="absolute w-6 h-6 bg-blue-600 rounded-full left-0 transition-transform transform"></span>
@@ -52,57 +52,57 @@
         <main class="mt-6">
             <div class="mb-6">
                 <h1 class="text-3xl font-bold">Dashboard</h1>
-                <ul class="flex space-x-2 text-gray-600">
-                    <li>Dashboard</li>
+                <ul class="flex space-x-2 text-gray-600 dark:text-white ">
+                    <li>visitor link reclea</li>
                 </ul>
             </div>
 
             <ul class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-4">
                 <li class="bg-white p-4 flex items-center space-x-4 shadow rounded-lg">
                     <i class='bx bxl-instagram text-4xl bg-pink-100 text-pink-600 p-2 rounded-full'></i>
-                    <div>
+                    <div class="dark:text-black" >
                         <h3 class="text-2xl font-bold">1020</h3>
                         <p>Instagram</p>
                     </div>
                 </li>
                 <li class="bg-white p-4 flex items-center space-x-4 shadow rounded-lg">
                     <i class='bx bxl-whatsapp text-4xl bg-green-100 text-green-600 p-2 rounded-full'></i>
-                    <div>
+                    <div class="dark:text-black" >
                         <h3 class="text-2xl font-bold">2834</h3>
                         <p>Whatsapp</p>
                     </div>
                 </li>
                 <li class="bg-white p-4 flex items-center space-x-4 shadow rounded-lg">
                     <i class='bx bxl-tiktok text-4xl bg-black text-white p-2 rounded-full'></i>
-                    <div>
+                    <div class="dark:text-black" >
                         <h3 class="text-2xl font-bold">2543</h3>
                         <p>Tiktok</p>
                     </div>
                 </li>
                 <li class="bg-white p-4 flex items-center space-x-4 shadow rounded-lg">
                     <i class='bx bxl-youtube text-4xl bg-red-100 text-red-600 p-2 rounded-full'></i>
-                    <div>
+                    <div class="dark:text-black" >
                         <h3 class="text-2xl font-bold">2543</h3>
                         <p>Youtube</p>
                     </div>
                 </li>
                 <li class="bg-white p-4 flex items-center space-x-4 shadow rounded-lg">
                     <i class='bx bxl-chrome text-4xl bg-blue-100 text-blue-600 p-2 rounded-full'></i>
-                    <div>
+                    <div class="dark:text-black">
                         <h3 class="text-2xl font-bold">2543</h3>
                         <p>Website</p>
                     </div>
                 </li>
                 <li class="bg-white p-4 flex items-center space-x-4 shadow rounded-lg">
                     <i class='bx bxs-file-archive text-4xl bg-gray-100 text-gray-600 p-2 rounded-full'></i>
-                    <div>
+                    <div class="dark:text-black">
                         <h3 class="text-2xl font-bold">2543</h3>
                         <p>Berita</p>
                     </div>
                 </li>
                 <li class="bg-white p-4 flex items-center space-x-4 shadow rounded-lg">
                     <i class='bx bx-task text-4xl bg-yellow-100 text-yellow-600 p-2 rounded-full'></i>
-                    <div>
+                    <div class="dark:text-black">
                         <h3 class="text-2xl font-bold">2543</h3>
                         <p>Why Reclea</p>
                     </div>
